css/main.css
/*! HTML5 Boilerplate v7.3.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */



/* ---------- General ----------*/


html {
  font-size: 16px;
}

body {
  font-size: 1em;
  font-family: 'Quicksand', sans-serif;
  color: #1F3C64;
  text-align: left;
}

ul,
ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  color: #FBFAEB;
  text-decoration: none;

}

h1 {
  font-weight: 300;
  font-size: 1.875em;
  margin: 0;
  text-transform: uppercase;
}

h2 {
  font-size: 1.5em;
  font-weight: 400;
  text-transform: uppercase;
}

h3 {
  font-size: 1.125em;
  font-weight: 600;
  text-transform: uppercase;
}

p {
  font-size: 1em;
  line-height: 1.375em;
  margin: 0;
}

img {
  width: ;
}

figure {
  margin: 0;
}

address {
  font-style: normal;
}

.container {
  min-width: 360px;
}

.content-wrapper {
  padding: 0 30px 0 30px;
  width: 90%;

}




/* ---------- Base Header - Footer Styles ----------*/


header,
footer {
  background-color: #1F3C64;
  /* alternate bg teal
  background-color: #114267;
  */
  color: #FBFAEB;
}

header .content-wrapper {
  padding-top: 30px;
  padding-bottom: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

/* Is this figure style necessary? 
header figure {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}
*/

header a {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header p {
  font-weight: 300;
  text-transform: uppercase;
}

header image {
  min-width: 90%;
}

header .header-divider {
  background: #FBFAEB;
  height: 1px;
  width: 100%;
  margin: 20px 0 20px 0;
}

header nav {
  width: 99%;
  display: flex;
  align-items: center;
  flex-flow: row wrap;
}

header nav ul {
  display: flex;
  justify-content: space-between;
  list-style: none;
  width: 100%;
}

header nav ul li {
  font-size: .9375em;
}


footer .content-wrapper {
    width: 90%;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
  }

footer h2 {
  margin: 50px 0 50px 0;
  width: 100%;
}

footer h3 {
  margin: 0;
  width: 100%;
}

footer p {
  font-size: .875em;
}


footer .contact-info {
  width: 100%;
}

footer .social {
  margin-top: 50px;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
}

footer .social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 190px;
}

footer .social-icons i {
  width: 40px;
  height: 40px;
  text-decoration: none;
  color: #FBFAEB;
}

footer .social-icons p {
  font-size: 3em;
}


footer .copyright {
  margin: 90px 0 35px 0;
  width: 100%;
}

footer .copyright p {
  font-size: .875em;
}



/* ---------- Main About (Hero) --------- */

#hero {
 background: url('../img/hero.jpg') center no-repeat; 
 background-size: cover;
 min-height: 290px;
 display: flex;
 justify-content: flex-start;
 align-items: center;
}

#hero .content-wrapper{

}




/* ---------- Main About (About) ---------- */





#about {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

#about .content-wrapper {
  margin: 50px 0 50px 0;
}

#about h2 {
  margin: 0;
}

#about p {

}

#about .divider {
  background: #DCF0A2;
  height: 3px;
  width: 100%;
  margin: 20px 0 30px 0;
}



/* ---------- Main Portfolio ----------*/

#portfolio h2 {
  margin: 0;
  padding-top: 50px;
}


#portfolio .divider {
  background: #DCF0A2;
  height: 3px;
  width: 100%;
  margin: 20px 0 50px 0;
}

#portfolio h3 {
  margin: 0;
  padding-bottom: 30px;
}

main #portfolio .photo-container {
 text-align: center;
 display: flex; 
 flex-direction: column; 
 justify-content: center; 
 align-content: center;
}

main #portfolio  .desktop-item {
  margin-bottom: 20px;
}

main #portfolio .desktop-item img {
 width: 100%;
}
/* ... */

